2020-01-22 Shahzad Muzaffar  <@smuzaffar>
	V05-08-75: Do not build a shared library or default plugin is BuildFile
	exists but there is no dependency in there e.g. contents of the BuildFile
	are conditional.

2020-01-09 Shahzad Muzaffar  <@smuzaffar>
	V05-08-74: Install rootmap files to lib directory after installing the
	library.

2019-11-27 Shahzad Muzaffar  <@smuzaffar>
	V05-08-73: Only add -L<path> of self tool which are in LD_LIBRARY_PATH too

2019-11-20 Shahzad Muzaffar  <@smuzaffar>
	V05-08-70: Copy only executable files in to PATH
	V05-08-71: Allow to copy directories
	V05-08-72: Copy directories only if explicitly requested via INSTALL_SCRIPTS
	flag in the package/scripts/BuildFile.xml
	Make sure to always create _rdict.pcm for biglib

2019-10-15 Shahzad Muzaffar  <@smuzaffar>
        V05-08-69: Fix coral buildfile for centos

2019-10-15 Shahzad Muzaffar  <@smuzaffar>
	V05-08-68: Fix for DD4Hep plugins component file.

2019-09-19 Shahzad Muzaffar  <@smuzaffar>
	V05-08-67: Changes needed tp support python2 and python3

2019-08-08 Shahzad Muzaffar  <@smuzaffar>
	V05-08-66: Do not run clang-tidy for files which are not in
	compile_commands.json.

2019-08-08 Shahzad Muzaffar  <@smuzaffar>
	V05-08-65: Revert rootcling changes
	Generate PCH using c++.

2019-07-31 Shahzad Muzaffar  <@smuzaffar>
       V05-08-64: Use rootcling instead of genreflex.

2019-06-26 Vassil Vassilev  <@vgvassilev>
	V05-08-62: Rename the legacy rootcint to rootcling.
	V05-08-63: Drop --deep which has no meaning in root6.
	https://github.com/cms-sw/cmsdist/pull/5110

2019-07-26 Shahzad Muzaffar  <@smuzaffar>
	V05-08-61: Drop unused capabilities rules.
	Always build with root PCMs.

2019-07-24 Shahzad Muzaffar  <@smuzaffar>
	V05-08-60: Added emit-llvm build rule

2019-07-03 Shahzad Muzaffar  <@smuzaffar>
	V05-08-59: Added project level hooks
	- Allow to run extra rules for various projects

2019-06-21 Shahzad Muzaffar  <@smuzaffar>